--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Register</h1>
-<form action="/register" method="POST">
+<form action="/web_app_war/register" method="POST">
     <div>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
